# base

./: README.md  baseLib.jks  build.gradle  settings.gradle
aop/: build.gradle
aop-plugin/: build.gradle
aop/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg1.xml  bg_divider.xml  selector_recharge_vip_item.xml  sp.xml
app/src/main/res/layout/: activity_auto_fold_keyboard.xml  activity_countdown.xml  activity_dialog.xml  activity_divider.xml  activity_image_utils.xml  activity_main.xml  activity_permissions.xml  activity_scoped_storage.xml  activity_shape_view.xml  activity_sheet_layout.xml  activity_smart_layout.xml  activity_span.xml  dialog_bottom_sheet.xml  fragment_auto_fold_keyboard.xml
app/src/main/res/menu/: scoped_storage.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
baseLib/: build.gradle  proguard-rules.pro
baseLib/src/main/: AndroidManifest.xml
baseLib/src/main/cpp/: CMakeLists.txt  Log.h  MPLog.h
baseLib/src/main/cpp/common/: Log.h
baseLib/src/main/cpp/mplog/: MPLog.cpp  MPLog.h  Native_MPLog.cpp
baseLib/src/main/res/anim/: scale_center_in.xml  scale_center_out.xml  slide_bottom_in.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
mmap/: build.gradle
mmap/src/main/: AndroidManifest.xml
mmap/src/main/cpp/: CMakeLists.txt  Log.h  MPFile.cpp  MPFile.h  Native.cpp
mpLog/: build.gradle
mpLog/src/main/: AndroidManifest.xml
mpLog/src/main/cpp/: CMakeLists.txt  MPLog.cpp  Native.cpp
(+512 files in other folders)
